--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
-
   <packaging>jar</packaging>
-  <groupId>org.webjars</groupId>
-  <artifactId>mirador</artifactId>
+  <groupId>de.digitalcollections</groupId>
+  <artifactId>mirador-dev</artifactId>
   <version>2.1.3-SNAPSHOT</version>
   <name>Mirador</name>
-  <description>WebJar for Mirador</description>
+  <description>WebJar for Mirador (development version)</description>
   <url>http://webjars.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <upstream.url>https://github.com/ProjectMirador/mirador/releases/download/v${version.unsnapshot}/build.zip</upstream.url>
-    <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}</destDir>
+    <upstream.url>https://github.com/ProjectMirador/mirador/archive/${version.unsnapshot}.zip</upstream.url>
+    <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/mirador/${version.unsnapshot}</destDir>
   </properties>
 
   <developers>
@@ -77,33 +71,43 @@
                 <get src="${upstream.url}" dest="${project.build.directory}/${project.artifactId}.zip" />
                 <echo message="unzip archive" />
                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
+                <echo message="install dependencies" />
+                <exec executable="npm" dir="${project.build.directory}/mirador-${version.unsnapshot}" >
+                  <arg value="install" />
+                </exec>
+                <echo message="build library" />
+                <exec executable="grunt" dir="${project.build.directory}/mirador-${version.unsnapshot}" />
                 <echo message="moving resources" />
                 <move todir="${destDir}">
-                  <fileset dir="${project.build.directory}/build/${project.artifactId}" />
+                  <fileset dir="${project.build.directory}/mirador-${version.unsnapshot}/build/mirador" />
                 </move>
               </target>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.5.3</version>
-      </plugin>
-
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.7</version>
-        <extensions>true</extensions>
-        <configuration>
-          <serverId>sonatype-nexus-staging</serverId>
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-          <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>ossrh-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
