--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,16 @@
   <packaging>jar</packaging>
   <groupId>de.digitalcollections</groupId>
   <artifactId>mirador-dev</artifactId>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>2.1.5-SNAPSHOT</version>
   <name>Mirador</name>
   <description>WebJar for Mirador (development version)</description>
   <url>http://webjars.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <upstream.url>https://github.com/ProjectMirador/mirador/archive/${version.unsnapshot}.zip</upstream.url>
+    <upstream.branch>develop</upstream.branch>
+    <upstream.url>https://github.com/dbmdz/mirador/archive/${upstream.branch}.zip</upstream.url>
+    <srcDir>develop</srcDir>
     <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/mirador/${version.unsnapshot}</destDir>
   </properties>
 
@@ -72,14 +74,14 @@
                 <echo message="unzip archive" />
                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                 <echo message="install dependencies" />
-                <exec executable="npm" dir="${project.build.directory}/mirador-${version.unsnapshot}" >
+                <exec executable="npm" dir="${project.build.directory}/mirador-${srcDir}" >
                   <arg value="install" />
                 </exec>
                 <echo message="build library" />
-                <exec executable="grunt" dir="${project.build.directory}/mirador-${version.unsnapshot}" />
+                <exec executable="grunt" dir="${project.build.directory}/mirador-${srcDir}" />
                 <echo message="moving resources" />
                 <move todir="${destDir}">
-                  <fileset dir="${project.build.directory}/mirador-${version.unsnapshot}/build/mirador" />
+                  <fileset dir="${project.build.directory}/mirador-${srcDir}/build/mirador" />
                 </move>
               </target>
             </configuration>
